# ai-bi-platform

./: .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: __init__.py  main.py  seed.py
backend/app/api/: __init__.py  deps.py  router.py
backend/app/api/routes/: __init__.py  analysis.py  auth.py  datasets.py  reports.py  streaming.py
backend/app/core/: __init__.py  config.py  logging.py  security.py
backend/app/db/: __init__.py  session.py
backend/app/models/: __init__.py  models.py
backend/app/schemas/: schemas.py  streaming.py
backend/app/services/: __init__.py  analytics_service.py  data_service.py  insight_service.py  llm_service.py  ml_service.py  pipeline_service.py  profiling_service.py  report_service.py  stream_connector.py  streaming.py
backend/sample_data/: sales.csv
backend/tests/: conftest.py  test_auth.py  test_services.py  test_streaming.py
backend/uploads/: .gitkeep
docs/: API.md  CONTRIBUTING.md
frontend/: .dockerignore  .prettierrc  Dockerfile  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/components/charts/: Chart.tsx
frontend/src/components/dashboard/: ChartsPanel.tsx  (+7 more)
frontend/src/lib/: api.ts  streaming.ts  types.ts
frontend/src/store/: auth.ts
(+1 files in other folders)
